--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,7 @@ button:focus {
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
+/* -- */
 
 .section .description{
  font-weight: 400;
