--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 /* Variables  */
 :root {
   --brand-color: #2196f3;
+  --brnd-hover-main: #188CE8;
   --brand-background-color: #2f303a;
   --brand-background-sub-color: #f5f4fa;
   --brand-text-color: #212121;
@@ -43,14 +44,17 @@ ul {
   color: var(--brand-color);
 }
 
-.btn:hover,
+/* .btn:hover,
 button:focus {
   color: var(--brand-background-color);
-}
+} */
 /* Buttons Css */
 .btn {
   cursor: pointer;
   border: none;
+  font-family: var(--font-family-main);
+  font-size: 16px;
+  line-height: 30px;
 }
 
 .logo {
@@ -75,14 +79,11 @@ button:focus {
   text-transform: uppercase;
   color: var(--brand-white-color);
 }
-.btn {
-  font-size: 16px;
-  line-height: 30px;
-}
+
 .btn-primary {
-  /* border-color: var(--brand-color); */
   background: var(--brand-color);
   color: var(--brand-white-color);
+  font-family: var(--font-family-main);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border-bottom-left-radius: 0;
@@ -92,7 +93,8 @@ button:focus {
   padding: 10px 20px 10px 20px;
 }
 .btn.btn-primary:hover {
-  color: var(--brand-text-color);
+ background-color: var(--brnd-hover-main);
+ color: var(--brand-white-color);
 }
 .btn.active {
   background-color: var(--brand-color);
@@ -115,20 +117,18 @@ button:focus {
  color: var(--brand-sub-color);
 }
 /* About css */
-.about h2,
-.about .team-info {
-  text-align: center;
-}
-.section .section-title{
+
+.section-title{
   color: var(--brand-text-color);
   font-weight: 700;
   font-size: 36px;
   line-height: 1.2;
   letter-spacing: 0.03em;
+  text-align: center;
 
 }
 
-.team-info .name {
+.team-info .team-name {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.2;
@@ -136,7 +136,7 @@ button:focus {
   letter-spacing: 0.03em;
 
 }
-.team-info .job {
+.team-info .team-job {
   color: var(--brand-sub-color);
   font-weight: 400;
   font-size: 16;
@@ -164,16 +164,27 @@ button:focus {
 .btn:hover {
   color: var(--brand-color);
 }
-.btn.btn.active:hover {
-  color: var(--brand-background-color);
+.btn.btn-filter{
+  font-family: var(--font-family-main);
+  border-radius: 4px;
+  letter-spacing: 0.03em;
+  font-weight: 500;
+  padding: 6px 26px;
+  font-size: 16px;
+  line-height: 1.9;
 }
-.portfolio .info .name {
+.btn.btn-filter:hover{
+  color: var(--brand-white-color);
+  background-color: var(--brand-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+.portfolio .project-name {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
 }
-.portfolio .info .category {
+.portfolio .project-category {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.88;
@@ -185,7 +196,8 @@ button:focus {
   background-color: var(--brand-background-color);
 }
 .address {
-  color: #ffffff;
+  color:rgba(255, 255, 255, 0.6);
+  font-style: normal;
 }
 .address ul {
   font-size: 14px;
@@ -197,6 +209,7 @@ button:focus {
   color: rgba(255, 255, 255, 0.6);
 
 }
-.contact.link:hover{
-  color: var(--brand-color);
+.contact.link:hover,
+.address .link:hover{
+  color: var(--brand-white-color);
 }
