--- a/css/styles.css
+++ b/css/styles.css
@@ -191,7 +191,7 @@ button:focus {
   letter-spacing: 0.03em;
   color: var(--brand-sub-color);
 }
-/* Footer Css */
+/* Footer - Style */
 .footer {
   background-color: var(--brand-background-color);
 }
